# simple_flie_copier

./: CMakeLists.txt
console_app/: CMakeLists.txt  main.cpp
